# ai-crews

edu_flow/: README.md  crewai_flow.html  pyproject.toml  report.md
edu_flow/src/edu_flow/: main.py
edu_flow/src/edu_flow/crews/edu_content_crew/: edu_content_crew.py
edu_flow/src/edu_flow/crews/edu_content_crew/config/: agents.yaml  tasks.yaml
edu_flow/src/edu_flow/crews/edu_research_crew/: edu_research_crew.py
edu_flow/src/edu_flow/crews/edu_research_crew/config/: agents.yaml  tasks.yaml
staybusy/: README.md  generate_report.py  pyproject.toml  request.md
staybusy-mini/: find_a_job.ipynb
staybusy-mini/config_job_finder/: agents.yaml  tasks.yaml
staybusy/src/staybusy/: crew.py  main.py
staybusy/src/staybusy/config/: agents.yaml
