[project]
name = "staybusy"
version = "0.1.0"
description = "staybusy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
staybusy = "staybusy.main:run"
run_crew = "staybusy.main:run"
train = "staybusy.main:train"
replay = "staybusy.main:replay"
test = "staybusy.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
